--- a/ch10/Gemfile
+++ b/ch10/Gemfile
@@ -26,6 +26,8 @@ gem 'puma', '~> 3.0'
 gem 'rack-cors', :require => 'rack/cors'
 gem 'active_model_serializers', '~> 0.10.0'
 
+gem 'jwt'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
